--- a/simplejaxb/pom.xml
+++ b/simplejaxb/pom.xml
@@ -25,6 +25,25 @@
       <version>4.11</version>
       <scope>test</scope>
     </dependency>
+    <!-- JAXB API only -->
+    <dependency>
+      <groupId>jakarta.xml.bind</groupId>
+      <artifactId>jakarta.xml.bind-api</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <!-- JAXB RI, EclipseLink MOXy -->
+    <dependency>
+      <groupId>org.eclipse.persistence</groupId>
+      <artifactId>org.eclipse.persistence.moxy</artifactId>
+      <version>3.0.0</version>
+    </dependency>
+    <!-- JAXB RI, Jakarta XML Binding -->
+    <dependency>
+      <groupId>com.sun.xml.bind</groupId>
+      <artifactId>jaxb-impl</artifactId>
+      <version>3.0.0</version>
+      <scope>runtime</scope>
+    </dependency>
   </dependencies>
 
   <build>
