--- a/simplejaxb/pom.xml
+++ b/simplejaxb/pom.xml
@@ -44,6 +44,12 @@
       <version>3.0.0</version>
       <scope>runtime</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>3.21.6</version>
+    </dependency>
   </dependencies>
 
   <build>
