--- a/Assignment_2/server/src/main/resources/application.properties
+++ b/Assignment_2/server/src/main/resources/application.properties
@@ -1,6 +1,8 @@
-spring.r2dbc.url=r2dbc:postgresql://postgres:postgres@localhost:5432/postgres
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/profsandstudents2
 spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.max-size=10
+spring.r2dbc.username=postgres
+spring.r2dbc.password=My01pass
 logging.level.org.springframework.r2dbc=DEBUG
 spring.sql.init.mode=always
