--- a/Assignment_2/server/src/main/resources/application.properties
+++ b/Assignment_2/server/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.max-size=10
 spring.r2dbc.username=postgres
-# spring.r2dbc.password=My01pass
-spring.r2dbc.password=postgres
+spring.r2dbc.password=My01pass
+#spring.r2dbc.password=postgres
 logging.level.org.springframework.r2dbc=DEBUG
 spring.sql.init.mode=always
