--- a/Assignment_2/server/src/main/resources/application.properties
+++ b/Assignment_2/server/src/main/resources/application.properties
@@ -3,7 +3,16 @@ spring.r2dbc.pool.enabled=true
 spring.r2dbc.pool.initial-size=5
 spring.r2dbc.pool.max-size=10
 spring.r2dbc.username=postgres
-#spring.r2dbc.password=My01pass
-spring.r2dbc.password=postgres
-logging.level.org.springframework.r2dbc=DEBUG
+spring.r2dbc.password=My01pass
+#spring.r2dbc.password=postgres
+
 spring.sql.init.mode=always
+
+logging.level.root=INFO
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.r2dbc=DEBUG
+logging.level.org.hibernate=ERROR
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} - %msg%n
+logging.pattern.file= "%d{yyyy-MM-dd } [%thread] %-5level %logger{36} - %msg%n"
+logging.file.path = logs
+logging.file.name= logs/app.log
