--- a/SI_Kafka_Classes/weather-station/pom.xml
+++ b/SI_Kafka_Classes/weather-station/pom.xml
@@ -48,6 +48,11 @@
       <version>2.0.0-alpha0</version>
       <scope>runtime</scope>
     </dependency>
+      <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.3</version>
+    </dependency>
   </dependencies>
 
   <build>
