--- a/SI_Kafka_Classes/kakfa/pom.xml
+++ b/SI_Kafka_Classes/kakfa/pom.xml
@@ -41,12 +41,16 @@
       <artifactId>slf4j-api</artifactId>
       <version>2.0.3</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+    <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-jdk14 -->
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-simple</artifactId>
-      <version>2.0.0-alpha0</version>
-      <scope>runtime</scope>
+      <artifactId>slf4j-jdk14</artifactId>
+      <version>2.0.3</version>
+    </dependency>
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
     </dependency>
   </dependencies>
 
