--- a/SI_Kafka_Classes/.devcontainer/docker-compose-standalone.yml
+++ b/SI_Kafka_Classes/.devcontainer/docker-compose-standalone.yml
@@ -57,6 +57,22 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker1:9092,EXTERNAL://localhost:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
 
+  broker2:
+    image: confluentinc/cp-kafka:7.0.1
+    container_name: broker2
+    ports:
+      - 29093:29092
+    depends_on:
+      - zookeeper
+    environment:
+      KAFKA_BROKER_ID: 2
+      KAFKA_BROKER_RACK: "r1"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:32181"
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker2:9092,EXTERNAL://localhost:29093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+
   connect:
     #build:
     #  context: .
@@ -65,10 +81,12 @@ services:
     container_name: connect
     depends_on:
       - broker1
+      - broker2
     ports:
       - 8083:8083
     links:
       - broker1
+      - broker2
       - database
     environment:
       - CONNECT_BOOTSTRAP_SERVERS=broker1:9092
@@ -99,6 +117,7 @@ services:
     links:
       - database
       - broker1
+      - broker2
       - zookeeper
     volumes:
       - ..:/workspace
