--- a/SI_Kafka_Classes/weather-station/pom.xml
+++ b/SI_Kafka_Classes/weather-station/pom.xml
@@ -59,7 +59,11 @@
       <artifactId>gson</artifactId>
       <version>2.10</version>
     </dependency>
-
+    <dependency>
+      <groupId>org.json</groupId>
+      <artifactId>json</artifactId>
+      <version>20210307</version>
+    </dependency>
   </dependencies>
 
   <build>
