--- a/SI_Kafka_Classes/.devcontainer/docker-compose-standalone.yml
+++ b/SI_Kafka_Classes/.devcontainer/docker-compose-standalone.yml
@@ -55,13 +55,14 @@ services:
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker1:9092,EXTERNAL://localhost:29092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
 
   broker2:
     image: confluentinc/cp-kafka:7.0.1
     container_name: broker2
     ports:
-      - 29093:29092
+      - 29093:29093
     depends_on:
       - zookeeper
     environment:
@@ -70,8 +71,9 @@ services:
       KAFKA_ZOOKEEPER_CONNECT: "zookeeper:32181"
       KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: INTERNAL:PLAINTEXT,EXTERNAL:PLAINTEXT
       KAFKA_INTER_BROKER_LISTENER_NAME: INTERNAL
-      KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker2:9092,EXTERNAL://localhost:29093
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker2:9093,EXTERNAL://localhost:29093
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
+      KAFKA_DEFAULT_REPLICATION_FACTOR: 2
 
   connect:
     #build:
@@ -89,7 +91,7 @@ services:
       - broker2
       - database
     environment:
-      - CONNECT_BOOTSTRAP_SERVERS=broker1:9092
+      - CONNECT_BOOTSTRAP_SERVERS=broker1:9092,broker2:9093
       - CONNECT_REST_ADVERTISED_PORT=8083
       - CONNECT_REST_ADVERTISED_HOST_NAME=connect
       - CONNECT_GROUP_ID=connect
