--- a/SI_Kafka_Classes/.devcontainer/docker-compose-standalone.yml
+++ b/SI_Kafka_Classes/.devcontainer/docker-compose-standalone.yml
@@ -57,6 +57,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker1:9092,EXTERNAL://localhost:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
       KAFKA_DEFAULT_REPLICATION_FACTOR: 2
+      KAFKA_NUM_PARTITIONS: 2
 
   broker2:
     image: confluentinc/cp-kafka:7.0.1
@@ -74,6 +75,7 @@ services:
       KAFKA_ADVERTISED_LISTENERS: INTERNAL://broker2:9093,EXTERNAL://localhost:29093
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 2
       KAFKA_DEFAULT_REPLICATION_FACTOR: 2
+      KAFKA_NUM_PARTITIONS: 2
 
   connect:
     #build:
